# elogind

./: .gitignore  .gitmodules  .mailmap  .perlcriticrc  .perltidyrc  .travis.yml  Makefile  Makefile-man.am  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  meson.build  meson.version  meson_options.txt
catalog/: elogind.bg.catalog
cb/: .gitignore  elogind.cbp
doc/: CODING_STYLE
docs/: ARCHITECTURE.md  CODE_QUALITY.md  CODING_STYLE.md  CREDENTIALS.md  ENVIRONMENT.md  FILE_DESCRIPTOR_STORE.md  JOURNAL_FILE_FORMAT.md  TESTING_WITH_SANITIZERS.md  UIDS-GIDS.md  USERDB_AND_DESKTOPS.md  USER_GROUP_API.md  USER_NAMES.md  USER_RECORD.md  USER_RECORD_BLOB_DIRS.md
man/: .gitignore  Makefile  busctl.xml  capsule@.service.xml  common-variables.xml  custom-entities.ent.in  custom-html.xsl  custom-man.xsl  directives-template.xml  elogind-battery-check.xml  elogind-bless-boot-generator.xml  elogind-bless-boot.service.xml  elogind-boot-check-no-failures.service.xml  elogind-bsod.xml  elogind-id128.xml  elogind-inhibit.xml  elogind-integritysetup-generator.xml  elogind-integritysetup@.service.xml  elogind-measure.xml  elogind-mount.xml  elogind-mountfsd.service.xml  elogind-nsresourced.service.xml  elogind-pcrphase.service.xml  elogind-portabled.service.xml  elogind-pstore.xml  elogind-rc-local-generator.xml  elogind-run-generator.xml  elogind-soft-reboot.service.xml  elogind-ssh-generator.xml  elogind-ssh-proxy.xml  elogind-sysupdated.service.xml  elogind-time-wait-sync.service.xml  elogind-tpm2-generator.xml  elogind-tpm2-setup.service.xml  elogind-userdbd.xml  elogind.conf.xml  elogind.image-policy.xml  elogind.journal-fields.xml  elogind.syntax.xml  elogind.time.xml  (+194 more)
man/rules/: meson.build
modprobe.d/: elogind.conf
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  be.po  be@latin.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sl.po  sr.po  (+6 more)
pwx/: check_tree.pl  last_mutual_commits.csv  migrate_tree.pl  pwx_exchange_list.txt  pwx_git_applier.sh  pwx_git_funcs.sh  pwx_git_getter.sh  pwx_git_patch_formatter.sh  pwx_last_mutual_commits.txt  rebuild_all.sh
pwx_local/: check_tree.pl  cleanup_headers.sh  last_mutual_commits.csv  update_po_files.pl
rules.d/: 73-seat-late.rules.in  meson.build
src/: .gitignore
src/basic/: af-list.c  af-list.h  alloc-util.c  alloc-util.h  ansi-color.h  architecture.h  argv-util.c  argv-util.h  async.c  async.h  audit-util.c  audit-util.h  audit.c  audit.h  blockdev-util.c  blockdev-util.h  btrfs-util.c  btrfs-util.h  build-path.c  build-path.h  build.c  build.h  bus-label.h  cap-list.c  cap-list.h  capability-util.c  capability-util.h  capability.c  capability.h  cgroup-util.c  cgroup-util.h  chase-symlinks.c  chase-symlinks.h  chase.c  chase.h  chattr-util.c  chattr-util.h  conf-files.c  conf-files.h  constants.h  (+259 more)
src/fundamental/: efivars-fundamental.c  efivars-fundamental.h  macro-fundamental.h  meson.build  sbat.h  sha1-fundamental.c  sha256.h  string-util-fundamental.c  string-util-fundamental.h  tpm-pcr.h  uki.h
src/login/: .gitignore  10-elogind.conf  70-power-switch.rules  71-seat.rules.in  73-seat-late.rules.in  73-seat-late.rules.m4  eloginctl.c  eloginctl.h  elogind-action.c  elogind-action.h  elogind-dbus.c  elogind-dbus.h  elogind-user.in  elogind-user.m4  elogind.c  elogind.conf  elogind.h  inhibit.c  loginctl.c  logind-acl.c  logind-acl.h  logind-action.c  logind-action.h  logind-brightness.c  logind-brightness.h  logind-button.c  logind-button.h  logind-core.c  logind-dbus.c  logind-dbus.h  logind-device.c  logind-gperf.gperf  logind-inhibit.c  logind-seat-dbus.c  logind-seat-dbus.h  logind-seat.c  logind-seat.h  logind-session-dbus.c  logind-session-dbus.h  logind-session-device.c  (+28 more)
src/nss-elogind/: meson.build  nss-elogind.c  nss-elogind.h  nss-elogind.sym  userdb-glue.c
src/shared/: acl-util.c  acl-util.h  apparmor-util.h  arphrd-list.c  ask-password-api.h  async.c  async.h  audit.h  blockdev-util.c  blockdev-util.h  bootspec.c  bootspec.h  btrfs-util.c  btrfs-util.h  build.h  bus-get-properties.c  bus-get-properties.h  bus-locator.c  bus-locator.h  bus-log-control-api.c  bus-map-properties.c  bus-map-properties.h  bus-object.c  bus-polkit.c  bus-polkit.h  bus-print-properties.c  bus-unit-procs.c  bus-unit-procs.h  bus-unit-util.c  bus-util.c  bus-util.h  bus-wait-for-jobs.c  bus-wait-for-jobs.h  bus-wait-for-units.c  bus-wait-for-units.h  calendarspec.c  cgroup-setup.c  cgroup-setup.h  cgroup-show.c  cgroup-show.h  (+184 more)
src/sleep/: 10-elogind.conf  battery-capacity.c  meson.build  sleep.c  sleep.conf  sleep.h
src/systemctl/: meson.build  systemctl-logind.c  systemctl-start-special.c  systemctl-start-unit.c  systemctl-start-unit.h  systemctl-sysv-compat.c  systemctl-sysv-compat.h  systemctl-util.c  systemctl-util.h  systemctl.c  systemctl.h
src/test/: generate-sym-test.py  meson.build  test-alloc-util.c  test-async.c  test-blockdev-util.c  test-bpf-foreign-programs.c  test-bpf.c  test-btrfs.c  test-bus-util.c  test-calendarspec.c  test-cgroup-cpu.c  test-cgroup-setup.c  test-cgroup-unit-default.c  test-cgroup-util.c  test-cgroup.c  test-chase-symlinks.c  test-chase.c  test-chown-rec.c  test-conf-files.c  test-conf-parser.c  test-copy.c  test-dev-setup.c  test-devnum-util.c  test-dlopen-so.c  test-dns-domain.c  test-ellipsize.c  test-emergency-action.c  test-env-file.c  test-escape.c  test-exec-util.c  test-exit-status.c  test-extract-word.c  test-fd-util.c  test-fdset.c  test-fido-id-desc.c  test-fileio.c  test-format-table.c  test-format-util.c  test-fs-util.c  test-gcrypt-util.c  (+72 more)
src/update-utmp/: meson.build  update-utmp.c  update-utmp.h
tools/: check-includes.pl  command_ignorelist  dbus_exporter.py  gdb-sd_dump_hashmaps.py  make-directive-index.py  make-index-md.sh  make-man-index.py  meson-check-api-docs.sh  meson-extract-unit-files.py  meson-get-cg-controller.sh  meson-symlink_headers.sh  sync-docs.py  (+1 more)
(+215 files in other folders)
